# rude-nmt

./: .gitignore  README.md  analysis.ipynb  attribute_data.sh  fine_tune.sh  get_contrastive_attrib_ds.py  get_contrastive_ds.sh  get_interpol_plot_helper.py  get_scores.sh  get_scores_helper.py  helper_scripts.py  kor_test.ipynb  label_data.sh  main.py  make_interpolation_plots.sh  pyproject.toml  requirements.txt  tatoeba.ipynb  translate_data.sh
data/iwslt2023/: data.md  telephony.formal.de  telephony.informal.de  topical_chat.formal.de  topical_chat.formal.ko  topical_chat.informal.de  topical_chat.informal.ko
iwslt/: __init__.py  preprocess.py
rude_nmt/: __init__.py  analysis.py  attention_experiments.ipynb  attribute.py  contrastive_analysis.ipynb  fine_tune.py  kor_test.ipynb  label_german.py  label_korean.py  translation.py
tatoeba/: __init__.py  analysis.py  preprocess.py  tatoeba.ipynb
