[tool.poetry]
name = "rude-nmt"
version = "0.1.0"
description = ""
authors = ["Ludwig Sickert <ludwigsickert@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rude_nmt"}]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.22.2"
datasets = "^2.5.1"
pandas = "^1.5.0"
matplotlib = "^3.6.0"
jamo = "^0.4.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.4.8"
ipykernel = "^6.15.0"
ipywidgets = "^8.0.4"
pylint = "^2.15.3"
pytest = "^7.1.3"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
